2007-04-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b56

 * Fix: Trim title on save in edit_appearance

2007-04-10 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b55

 * Fix: Quotes in album title broke subalbumtree

 * Change: Unified adminbar links.

 Thanks to AndrewVasilyev from forums for reporting this

 * Temp fix: Removed KOI8-R from supported charsets for htmlentities.

2007-03-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b54

 * Fix: Htmlfix in b53 broke image area links.

   Thanks again to Ajuniper.

 * Fix: No empty tooltip if no hovertext is given.

2007-03-21 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b53

 * Fix: Quotes (single and double) and backslash were not quoted in
        imagemap.

 Thanks to Ajuniper from Forum.

 * Fix: Little HTML fixes in imagemap.

2007-03-09 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b52

 * New: function truncateText() in new file lib/text.php

 * Change: truncate Album names in move_photo to 15 chars.

2007-03-09 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b51

 * Change: general.footer does not exist anymore.

 * Fix: Use overall.footer where general.footer were used.

2007-03-09 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b50

 * Fix: crop_photo.php is no popup.

2007-03-08 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b49

 * Fix: View comments were broken when embedded.
   
   Thanks to Draccie from forums.

 * Fix: Critical typo in ebuild_capture_dates.php

 * Fix: HTML bug in templates/overall.footer.tpl.default

 * Change: Nicify in popups/edit_caption.php

 * Change: Added css for tooltip in base.css

2007-03-08 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b48

 Fix: Permission issue.
      Album1 from user1 with permission for user2 to create a subalbum.
      User2 is owner and in thumbsview he got the option to move this album.
      But album2 is an item of album1 ...

 Thanks to Peter Schumacher.

 * Fix: Added another missing entry in translation filelist.

2007-03-08 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b47
