@@ -1,3 +1,9 @@
+2007-04-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b57
+
+ * Fix: Show correct (and nice) tooltip for subalbums in thumbsview.
+
+   Thanks to dimo from forums.
+
 2007-04-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b56
 
  * Fix: Trim title on save in edit_appearance
